--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 openai==0.27.2
-elevenlabs==0.1.1
+elevenlabs==0.1.
+google-cloud-texttospeech==2.14.1
+gTTS==2.3.1
 pyaudio==0.2.13
 numpy==1.21.0
-scipy==1.10.1
-python-dotenv==1.0.0
+scipy==1.7.3
+python-dotenv==0.21.1
