--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ google-cloud-texttospeech==2.14.1
 gTTS==2.3.1
 pyaudio==0.2.13
 numpy==1.21.0
-scipy==1.10.1
 python-dotenv==0.21.1
+soundfile==0.12.1
